--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ hiredis
 django-redis-cache
 djangorestframework
 psycopg2
-aiohttp
-websockets
+aiohttp>=2.0.0,<2.3.0
+websockets>=3.1,<4.0
 git+https://github.com/Rapptz/discord.py@rewrite
