--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ djangorestframework
 psycopg2
 aiohttp>=2.0.0,<2.3.0
 websockets>=3.1,<4.0
-git+https://github.com/Rapptz/discord.py@rewrite
+git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py
